made the before of innerCategory and sort quizzes white in nightMode | fix the nightMode which was not working after going to section which is not allowed nightMode and restore to lightMode | made the sub header right align

--- a/app/static/css/lightTheme.scss
+++ b/app/static/css/lightTheme.scss
@@ -60,6 +60,12 @@ body {
     img {
         box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
+
+    &List > ul > li {
+        &::before {
+            content: '◽'
+        }
+    }
 }
 
 .quizzes {
@@ -84,6 +90,14 @@ body {
 
     &__contoller__btn {
         box-shadow: inset 0 0 10px #000000;
+    }
+
+    &More {
+        &__item {
+            &::after {
+                content: '◽'
+            }
+        }
     }
 }
 
